# Strategic-Consultant

./: .dockerignore  .env.example  .env.gcp.example  .gitattributes  .gitignore  PRODUCTION_DIAGNOSTIC_REPORT.md  PRODUCTION_IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS_FINAL_REPORT.md  QUALITY_ASSESSMENT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  SYNTHESIS_FIX_CHECKLIST.md  VERIFICATION_REPORT.md  docker-compose.gcp-free.yml  docker-compose.prod.yml  docker-compose.yml  litellm_config.yaml  package-lock.json  package.json  start.sh  test_production_fixes.py  tsconfig.json
asis/backend/: .env.example  Dockerfile  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
asis/backend/asis/: __init__.py
asis/backend/asis/backend/: __init__.py  main.py
asis/backend/prisma/: schema.prisma
asis/backend/scripts/: dsr_eval.py
asis/backend/src/: server.ts
asis/backend/src/agents/: cove.agent.ts  ethicist.agent.ts  marketIntel.agent.ts  masterPrompt.ts  pipeline.ts  quant.agent.ts  redteam.agent.ts  risk.agent.ts  strategist.agent.ts  synthesis.agent.ts  types.ts
asis/backend/src/lib/: auth.ts  llmClient.ts  logger.ts  reportAdapter.ts  socketio.ts  webSearch.ts
asis/backend/src/routes/: analysis.routes.ts  auth.routes.ts  dissertation.routes.ts  memory.routes.ts  (+2 more)
asis/backend/tests/: conftest.py  test_agents.py  test_analysis.py  test_auth.py  test_config.py  test_edge_cases_scalability.py  test_llm_integration.py  test_memory.py  test_quality_gate.py  test_quality_sanity.py  test_settings.py
(+225 files in other folders)
